# ai-news-aggregator-local

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  check_db.py  check_enum.py  fix_enum_casing.py  migrate_add_confirmation.py  migrate_source_types.py  migrate_subscribers.py  pyproject.toml  render.yaml  test_youtube.py
app/: config.py  runner.py  user_profile.py
app/agent/: curation_service.py  curator.py  digest_service.py  email_agent.py  email_sender.py  llm_client.py  summarizer.py
app/api/: main.py  schemas.py
app/database/: connection.py  create_tables.py  models.py  repository.py
app/scrapers/: anthropic_blog.py  arxiv_scraper.py  huggingface_blog.py  meta_ai_blog.py  openai_blog.py  youtube.py
app/static/: about.html  app.js  index.html  manage.html  style.css
docker/: docker-compose.yml
