[project]
name = "ai-news-aggregator-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docling>=2.76.0",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "openai>=2.24.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "youtube-transcript-api>=1.2.4",
]
