[project]
name = "ai-news-aggregator-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.115.0",
    "feedparser>=6.0.12",
    "groq>=0.25.0",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "openai>=2.24.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.30.0",
    "youtube-transcript-api>=1.2.4",
]
